stoat/src/snapshots/stoat__test_harness__snapshot_extend_to_line_start.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: snapshot
focused: #1 of 1
mode: normal
size: 30x5
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52mf[0m[38;2;250;250;250m[48;2;62;68;82moo b[0m[38;2;250;250;250m[48;2;40;44;52mar baz               [0m
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                          [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                              [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                              [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) /test/s.txt [0m[38;2;99;109;131m[48;2;99;109;131m──[0m
