stoat/src/snapshots/stoat__test_harness__snapshot_goto_last_line.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: j
focused: #1 of 1
mode: normal
size: 20x6
---
[0m[97mabc[0m
[0m[97mdef[0m
[0m[7m[97mg[0m[97mhi[0m


[0m[1m[30m[44m NOR [0m[1m[97m[100m (unnamed) [0m[97m[100m/tes[0m
